samples/_failures_safe/1761450293_689c02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_910614c2.c: In function ‘main’:
./samples/SAFE/__tmp_910614c2.c:184:9: error: expected expression at end of input
  184 |         if (token.type ==
      |         ^~
./samples/SAFE/__tmp_910614c2.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_910614c2.c:184:9: error: expected declaration or statement at end of input
